--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint:next": "next lint",
     "lint:eslint": "eslint . --ext .ts,.tsx --ignore-pattern pages --ignore-pattern components",
     "schema": "ts-node --transpile-only -e \"import './source/graphql/generate'\" -O '{\"module\":\"commonjs\"}'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "engines": {
     "node": "^16"
@@ -40,13 +42,19 @@
     "redirect-https": "^1.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@graphql-codegen/core": "^1.17.10",
     "@graphql-codegen/typescript": "^1.22.3",
     "@graphql-codegen/typescript-resolvers": "^1.19.4",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@types/express": "^4.17.13",
     "@types/react": "17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-loader": "^8.2.3",
     "eslint": "<8.0.0",
     "eslint-config-next": "12.0.4",
     "husky": "^7.0.4",
