--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@apollo/react-ssr": "^4.0.0",
-    "@emotion/css": "^11.5.0",
+    "@emotion/react": "^11.6.0",
     "apollo-link-schema": "^1.2.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
