--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@apollo/client": "^3.3.20",
     "@apollo/react-ssr": "^4.0.0",
     "@emotion/react": "^11.6.0",
+    "@graphql-tools/stitch": "^8.4.1",
     "apollo-link-schema": "^1.2.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@graphql-codegen/core": "^1.17.10",
     "@graphql-codegen/typescript": "^1.22.3",
     "@graphql-codegen/typescript-resolvers": "^1.19.4",
@@ -59,6 +61,7 @@
     "eslint-config-next": "12.0.4",
     "husky": "^7.0.4",
     "nodemon": "^2.0.15",
+    "storybook-addon-emotion-theme": "^2.1.1",
     "ts-node": "^10.4.0",
     "typescript": "4.4.4"
   }
