--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@apollo/client": "^3.3.20",
     "@apollo/react-ssr": "^4.0.0",
     "@emotion/react": "^11.6.0",
-    "@graphql-tools/stitch": "^8.4.1",
+    "@graphql-tools/stitch": "<8",
     "apollo-link-schema": "^1.2.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
