--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@svgr/webpack": "^5.5.0",
     "@types/express": "^4.17.13",
     "@types/react": "17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
