--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "dev": "ts-node --transpile-only -r dotenv/config -O '{\"module\":\"commonjs\"}' .",
+    "dump": "ts-node --transpile-only -r dotenv/config -O '{\"module\":\"commonjs\"}' ./dump",
     "build": "next build && tsc -P tsconfig.json --outDir dist --noEmit false --module commonjs",
     "start": "node dist/source",
     "lint": "yarn lint:tsc && yarn lint:eslint && yarn lint:next",
