--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@apollo/client": "^3.3.20",
     "@apollo/react-ssr": "^4.0.0",
     "@emotion/react": "^11.6.0",
+    "@emotion/serialize": "^1.0.2",
     "@graphql-tools/stitch": "<8",
     "apollo-link-schema": "^1.2.5",
     "dotenv": "^10.0.0",
