--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-config-next": "12.0.4",
     "husky": "^7.0.4",
     "nodemon": "^2.0.15",
+    "storybook-addon-apollo-client": "^4.0.9",
     "storybook-addon-emotion-theme": "^2.1.1",
     "storybook-addon-next-router": "^3.0.8",
     "ts-node": "^10.4.0",
