--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-swipeable": "^6.2.0",
     "redirect-https": "^1.3.1"
   },
   "devDependencies": {
