--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable": "^6.2.0",
-    "redirect-https": "^1.3.1"
+    "redirect-https": "^1.3.1",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -58,6 +59,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/express": "^4.17.13",
     "@types/react": "17.0.35",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.3",
