--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-hookstore": "^1.5.1",
     "react-swipeable": "^6.2.0",
     "redirect-https": "^1.3.1",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -60,6 +62,7 @@
     "@types/express": "^4.17.13",
     "@types/react": "17.0.35",
     "@types/smoothscroll-polyfill": "^0.3.1",
+    "@types/store": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "babel-loader": "^8.2.3",
