--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@emotion/serialize": "^1.0.2",
     "@graphql-tools/stitch": "<8",
     "apollo-link-schema": "^1.2.5",
+    "chalk": "^4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-winston": "^4.2.0",
     "graphql": "^15.5.1",
     "graphql-type-long": "^0.1.1",
     "just-throttle": "^4.0.1",
@@ -46,7 +48,8 @@
     "react-swipeable": "^6.2.0",
     "redirect-https": "^1.3.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "winston": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
