--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@graphql-tools/stitch": "<8",
     "apollo-link-schema": "^1.2.5",
     "chalk": "^4",
+    "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
