--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql": "^15.5.1",
     "graphql-type-long": "^0.1.1",
     "just-throttle": "^4.0.1",
+    "metamask-react": "^2.3.0",
     "modern-normalize": "^1.1.0",
     "mongoose": "^5.12.15",
     "next": "^12.0.4",
