--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "apollo-link-schema": "^1.2.5",
     "aws-sdk": "^2.1074.0",
     "chalk": "^4",
-    "color": "^4.2.1",
+    "colord": "^2.9.2",
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -66,7 +66,6 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@svgr/webpack": "^5.5.0",
-    "@types/color": "^3.0.3",
     "@types/express": "^4.17.13",
     "@types/react": "17.0.35",
     "@types/smoothscroll-polyfill": "^0.3.1",
