--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hookstore": "^1.5.1",
+    "react-resize-detector": "^7.0.0",
     "react-swipeable": "^6.2.0",
     "redirect-https": "^1.3.1",
     "smoothscroll-polyfill": "^0.4.4",
