--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-graphql": "^0.12.0",
     "express-winston": "^4.2.0",
     "graphql": "^15.5.1",
+    "graphql-type-json": "^0.3.2",
     "graphql-type-long": "^0.1.1",
     "just-throttle": "^4.0.1",
     "metamask-react": "^2.3.0",
