--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "graphql-type-json": "^0.3.2",
     "graphql-type-long": "^0.1.1",
     "just-throttle": "^4.0.1",
+    "memoizee": "^0.4.15",
     "metamask-react": "^2.3.0",
     "modern-normalize": "^1.1.0",
     "mongoose": "^5.12.15",
     "next": "^12.0.4",
+    "opensea-js": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hookstore": "^1.5.1",
@@ -55,6 +57,7 @@
     "redirect-https": "^1.3.1",
     "smoothscroll-polyfill": "^0.4.4",
     "store": "^2.0.12",
+    "web3": "^1.7.1",
     "winston": "^3.4.0"
   },
   "devDependencies": {
@@ -69,6 +72,7 @@
     "@storybook/react": "^6.3.12",
     "@svgr/webpack": "^5.5.0",
     "@types/express": "^4.17.13",
+    "@types/memoizee": "^0.4.7",
     "@types/react": "17.0.35",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/store": "^2.0.2",
