--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "modern-normalize": "^1.1.0",
     "mongoose": "^5.12.15",
     "next": "^12.0.4",
+    "next-routes": "^1.4.2",
     "opensea-js": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
