--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql": "^15.5.1",
     "graphql-type-json": "^0.3.2",
     "graphql-type-long": "^0.1.1",
+    "is-mobile": "^3.1.1",
     "just-throttle": "^4.0.1",
     "memoizee": "^0.4.15",
     "metamask-react": "^2.3.0",
