--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "graphql-type-json": "^0.3.2",
     "graphql-type-long": "^0.1.1",
     "is-mobile": "^3.1.1",
+    "just-intersect": "^4.1.0",
     "just-throttle": "^4.0.1",
     "memoizee": "^0.4.15",
     "metamask-react": "^2.3.0",
