--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/serialize": "^1.0.2",
     "@graphql-tools/stitch": "<8",
+    "@metamask/eth-sig-util": "^4.0.0",
     "apollo-link-schema": "^1.2.5",
     "chalk": "^4",
     "colord": "^2.9.2",
