--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:eslint": "eslint . --ext .ts,.tsx --ignore-pattern pages --ignore-pattern components",
     "schema": "ts-node --transpile-only -e \"import './source/graphql/generate'\" -O '{\"module\":\"commonjs\"}'",
     "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "STORYBOOK=true start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "engines": {
