--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-resize-detector": "^7.0.0",
     "react-swipeable": "^7.0.0",
     "redirect-https": "^1.3.1",
+    "shadertoy-react": "^1.1.2",
     "smoothscroll-polyfill": "^0.4.4",
     "store": "^2.0.12",
     "web3": "^1.7.1",
