--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^5.12.15",
     "next": "^12.0.4",
     "next-routes": "^1.4.2",
+    "nextjs-google-analytics": "^2.2.2",
     "opensea-js": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
