--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "metamask-react": "^2.3.0",
     "modern-normalize": "^1.1.0",
     "mongoose": "^5.12.15",
-    "next": "^12.0.4",
+    "next": "12.2.0",
     "next-routes": "^1.4.2",
     "nextjs-google-analytics": "^2.2.2",
     "opensea-js": "^3.0.1",
