--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/serialize": "^1.0.2",
     "@graphql-tools/stitch": "<8",
     "@metamask/eth-sig-util": "^4.0.0",
+    "@next/bundle-analyzer": "^13.2.4",
     "apollo-link-schema": "^1.2.5",
     "chalk": "^4",
     "colord": "^2.9.2",
