--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
+    "react/no-unknown-property": ["error", { "ignore": ["css"] }],
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
