--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "schema": "ts-node --transpile-only -e \"import './source/graphql/generate'\" -O '{\"module\":\"commonjs\"}'",
     "prepare": "husky install",
     "storybook": "STORYBOOK=true start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch",
+    "testManual": "ts-node --transpile-only -r dotenv/config -O '{\"module\":\"commonjs\"}' ./__tests__/index"
   },
   "engines": {
     "node": "^21"
@@ -57,6 +59,7 @@
     "nextjs-google-analytics": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.48.2",
     "react-hookstore": "^1.5.1",
     "react-resize-detector": "^7.0.0",
     "react-swipeable": "^7.0.0",
@@ -80,7 +83,9 @@
     "@storybook/react": "^6.3.12",
     "@svgr/webpack": "^5.5.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.11",
     "@types/memoizee": "^0.4.7",
+    "@types/node": "^20.10.4",
     "@types/react": "17.0.35",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/store": "^2.0.2",
@@ -90,11 +95,16 @@
     "eslint": "<8.0.0",
     "eslint-config-next": "12.0.4",
     "husky": "^7.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.0.11",
+    "node-mocks-http": "^1.13.0",
     "nodemon": "^2.0.15",
     "storybook-addon-apollo-client": "^4.0.9",
     "storybook-addon-emotion-theme": "^2.1.1",
     "storybook-addon-next-router": "^3.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "4.4.4"
+    "typescript": "5.0.4",
+    "undici": "^6.0.1"
   }
 }
