--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/memoizee": "^0.4.11",
     "@types/node": "^22.10.2",
     "@types/react": "19.0.1",
+    "@types/react-dom": "^19.0.3",
     "@types/smoothscroll-polyfill": "^0.3.4",
     "@types/store": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
