--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
       "@emotion/core": ["./typings/emotion.d.ts"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".storybook/StoryGraphqlHandlers.ts"
+  ],
   "exclude": ["node_modules", "components/**/*.stories.*"]
 }
