--- a/package.json
+++ b/package.json
@@ -77,13 +77,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@chromatic-com/storybook": "^3.2.2",
     "@emotion/babel-preset-css-prop": "^11.12.0",
     "@graphql-codegen/core": "^4.0.2",
     "@graphql-codegen/typescript": "^4.1.2",
     "@graphql-codegen/typescript-resolvers": "^4.4.1",
     "@next/bundle-analyzer": "^15.1.0",
     "@storybook/addon-actions": "^8.4.7",
+    "@storybook/addon-designs": "^8.2.0",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
