--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "proxy": "localhost:3000",
   "scripts": {
-    "dev": "NODE_OPTIONS=--max_old_space_size=4096 ts-node --transpile-only -r dotenv/config -O '{\"module\":\"commonjs\"}' .",
+    "dev": "next dev",
     "dump": "ts-node --transpile-only -r dotenv/config -O '{\"module\":\"commonjs\"}' ./dump",
     "build": "next build && tsc -P tsconfig.json --outDir dist --noEmit false --module commonjs",
     "start": "node dist/source",
@@ -59,7 +59,7 @@
     "modern-normalize": "^3.0.1",
     "mongoose": "^8.9.0",
     "msw-storybook-addon": "^2.0.4",
-    "next": "15.1.0",
+    "next": "^15.2.2-canary.2",
     "next-routes": "^1.4.2",
     "nextjs-google-analytics": "^2.3.7",
     "react": "^19.0.0",
